# skallaquad

./: .gitignore  CMakeLists.txt  README.md
include/: skallaquad.h
src/: run_integration.c  skallaquad.c
tests/: CMakeLists.txt  test_trapezoid.c
